created git ignore file & installed nodemon

--- a/03 - Improved Development Workflow and Debugging/package.json
+++ b/03 - Improved Development Workflow and Debugging/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/walshyc/Learning-NodeJS/issues"
   },
-  "homepage": "https://github.com/walshyc/Learning-NodeJS#readme"
+  "homepage": "https://github.com/walshyc/Learning-NodeJS#readme",
+  "devDependencies": {
+    "nodemon": "^1.19.2"
+  }
 }
