--- a/04 - Express.js/package.json
+++ b/04 - Express.js/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/walshyc/Learning-NodeJS#readme",
   "devDependencies": {
     "nodemon": "^1.19.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
