--- a/15 - Adding Authentication/package.json
+++ b/15 - Adding Authentication/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^1.19.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-mongodb-session": "^2.2.0",
     "ejs": "^2.7.1",
