--- a/16 - Sending Emails/package.json
+++ b/16 - Sending Emails/package.json
@@ -33,6 +33,8 @@
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.6",
     "mysql2": "^1.7.0",
+    "nodemailer": "^6.3.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^2.0.4",
     "sequelize": "^5.19.2"
   }
