--- a/20 - File Up and Download/package.json
+++ b/20 - File Up and Download/package.json
@@ -33,6 +33,7 @@
     "express-validator": "^6.2.0",
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.6",
+    "multer": "^1.4.2",
     "mysql2": "^1.7.0",
     "nodemailer": "^6.3.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
