--- a/20 - File Up and Download/package.json
+++ b/20 - File Up and Download/package.json
@@ -37,6 +37,7 @@
     "mysql2": "^1.7.0",
     "nodemailer": "^6.3.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.10.0",
     "pug": "^2.0.4",
     "sequelize": "^5.19.2"
   }
