--- a/23 - Payments/package.json
+++ b/23 - Payments/package.json
@@ -39,6 +39,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.10.0",
     "pug": "^2.0.4",
-    "sequelize": "^5.19.2"
+    "sequelize": "^5.19.2",
+    "stripe": "^7.14.0"
   }
 }
